# ednitar-clap

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  params.rs  presets.rs
src/dsp/: amp.rs  cab.rs  chain.rs  filters.rs  fx.rs  gate.rs  mod.rs
