[package]
name = "edm_gtr"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["you"]
description = "Ednitar: minimal EDM guitar CLAP effect"
repository = "https://github.com/yourname/edm-gtr-clap"
readme = "README.md"
categories = ["multimedia::audio", "multimedia::audio::plugins"]
keywords = ["clap", "guitar", "edm", "audio", "nih-plug"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", branch = "master" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "s"
panic = "abort"
